test/TestSuite/Scheduler/Errors/booking_conflict.tjp
project test "Test" "1.0" 2007-04-24 +2m

resource tux "Tux"

# MARK: error 9 booking_conflict

task foo "Foo" {
  booking tux 2007-04-25-10:00 +2h
	booking tux 2007-04-25-11:00 +1h
}
